--- a/Web/index.html
+++ b/Web/index.html
@@ -40,9 +40,12 @@
                     <li><a href="mailto:info@smartway.com"><i class="fa fa-envelope"></i><span>info@smartway.com</span></a></li>
                 </ul>
                 <nav class="pull-right">
-                    <ul>
+                    <ul data-ng-Hide="isLoggedIn">
                         <li><a href="#Register"><i class="fa fa-user"></i><span>Register</span></a></li>
                         <li><a href="#Login"><i class="fa fa-lock"></i><span>Log In</span></a></li>
+                    </ul>
+                    <ul data-ng-show="isLoggedIn">
+                        <li>Welcome {{userName}}</li>
                     </ul>
                 </nav>
             </div>
