--- a/Web/index.html
+++ b/Web/index.html
@@ -46,6 +46,7 @@
                     </ul>
                     <ul data-ng-show="isLoggedIn">
                         <li>Welcome {{userName}}</li>
+                        <li><a ng-click="logout()"><i class="fa"></i><span>Log Out</span></a></li>
                     </ul>
                 </nav>
             </div>
@@ -71,10 +72,10 @@
                         <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown">Content<b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#Courses">Courses</a></li>
-                                <li><a href="#AddCourse">Add Courses</a></li>
+                                <li ng-if="isAdmin()"><a href="#AddCourse">Add Courses</a></li>
                                 <li class="divider"></li>
                                 <li><a href="#ToolKit">Toolkit</a></li>
-                                <li><a href="#Courses">Add Toolkit</a></li>
+                                <li ng-if="isAdmin()"><a href="#Courses">Add Toolkit</a></li>
                             </ul>
                         </li>
                         <li><a href="#ContactUs">Contact</a></li>
