--- a/Web/index.html
+++ b/Web/index.html
@@ -71,13 +71,26 @@
                         <li><a href="#AboutUs">About Us</a></li>
                         <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown">Content<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#Courses">Courses</a></li>
-                                <li ng-if="isAdmin()"><a href="#AddCourse">Add Courses</a></li>
+                                <li><a href="#Courses">Course</a></li>
+                                <li ng-if="isAdmin()"><a href="#AddCourse">Add Course</a></li>
                                 <li class="divider"></li>
                                 <li><a href="#ToolKit">Toolkit</a></li>
                                 <li ng-if="isAdmin()"><a href="#Courses">Add Toolkit</a></li>
                             </ul>
                         </li>
+                        
+                        <li class="dropdown" ng-if="isRegisteredUser()">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">My Account<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li ng-if="isCustomer()"><a href="#Courses">Purchased Course</a></li>
+                                <li ng-if="isCustomer()"><a href="#ToolKit">Purchased Toolkit</a></li>
+                                <li ng-if="isAdmin()"><a href="#">Reports</a></li>
+                                <li ng-if="isAdmin()"><a href="#">Registered Users List</a></li>
+                                <li ng-if="isAdmin()"><a href="#">Users Course Purchase History</a></li>
+                                <li ng-if="isAdmin()"><a href="#">Users Toolkit Purchase History</a></li>
+                            </ul>
+                        </li>
+
                         <li><a href="#ContactUs">Contact</a></li>
                     </ul>
                 </nav>
