Added toolkit functioanlity

--- a/Web/index.html
+++ b/Web/index.html
@@ -75,7 +75,7 @@
                                 <li ng-if="isAdmin()"><a href="#AddCourse">Add Course</a></li>
                                 <li class="divider"></li>
                                 <li><a href="#ToolKit">Toolkit</a></li>
-                                <li ng-if="isAdmin()"><a href="#Courses">Add Toolkit</a></li>
+                                <li ng-if="isAdmin()"><a href="#AddToolkit">Add Toolkit</a></li>
                             </ul>
                         </li>
                         
