Added purchased pages

--- a/Web/index.html
+++ b/Web/index.html
@@ -82,8 +82,8 @@
                         <li class="dropdown" ng-if="isRegisteredUser()">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown">My Account<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li ng-if="isCustomer()"><a href="#Courses">Purchased Course</a></li>
-                                <li ng-if="isCustomer()"><a href="#ToolKit">Purchased Toolkit</a></li>
+                                <li ng-if="isCustomer()"><a href="#PurchasedCourse">Purchased Course</a></li>
+                                <li ng-if="isCustomer()"><a href="#PurchasedToolkit">Purchased Toolkit</a></li>
                                 <li ng-if="isAdmin()"><a href="#">Reports</a></li>
                                 <li ng-if="isAdmin()"><a href="#">Registered Users List</a></li>
                                 <li ng-if="isAdmin()"><a href="#">Users Course Purchase History</a></li>
