--- a/Web/index.html
+++ b/Web/index.html
@@ -23,6 +23,7 @@
     <script src="app/app.js"></script>
     <script src="app/service/Services.js"></script>
     <script src="app/service/authService.js"></script>
+    <script src="app/service/authInterceptorService.js"></script>
     <script src="app/controller/Controller.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoRMxiPsqJ9SUuaK1KsCAjd3gqnecjlBw&amp;sensor=false"></script>    
     
